--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
+
     <title>Grand tour</title>
   </head>
   <body>
@@ -214,6 +216,8 @@
     <article class="container">
         <h2 class="display-4">Enjoy the trip</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ullam ipsum autem, alias laudantium velit doloribus eligendi magnam nam eius ad nulla rerum totam? Adipisci sint inventore officia in rerum!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem ullam ipsum autem, alias laudantium velit doloribus eligendi magnam nam eius ad nulla rerum totam? Adipisci sint inventore officia in rerum!</p>
+
         <button class="btn btn-lg btn-outline-primary">Book now</button>
     </article>
 </section>
